dialog positioning fixed, so that it they no longer get cut off on smaller screens

--- a/Kolan/wwwroot/scss/components/dialog.scss
+++ b/Kolan/wwwroot/scss/components/dialog.scss
@@ -23,9 +23,9 @@ input[type="color"] {
 .dialog {
     position: absolute;
     width: 800px;
-    top: 50%;
+    top: 50px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     background-color: white;
     padding: 20px 60px 40px 60px;
     box-sizing: border-box;
